Add QtSvg to NodeEditorConfig.cmake.in

--- a/cmake/NodeEditorConfig.cmake.in
+++ b/cmake/NodeEditorConfig.cmake.in
@@ -8,7 +8,8 @@ find_package(Qt5 REQUIRED COMPONENTS
              Core
              Widgets
              Gui
-             OpenGL)
+             OpenGL
+             Svg)
 
 if(NOT TARGET NodeEditor::nodes)
     include("${NodeEditor_CMAKE_DIR}/NodeEditorTargets.cmake")
